Make Contao CLI API features and commands available in manager API
